<resources>
    <string name="app_name">ZeVe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageView">This is a imageView</string>

    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="forgotId">아이디찾기</string>
    <string name="forgotPwd">비밀번호찾기</string>
    <string name="loginUp">회원가입</string>
    <string name="checkOverlap">중복확인</string>
    <string name="checkPwd">비밀번호확인</string>
    <string name="name">이름</string>
    <string name="sex">성별</string>
    <string name="F">녀</string>
    <string name="M">남</string>
    <string name="year">성년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="email">이메일</string>
    <string name="phone">전화번호</string>
    <string name="certification">인증받기</string>
    <string name="certificationNum">전화번호 인증번호</string>
    <string name="nickname">돈없는백수</string>
    <string name="co2">총 감소 CO2</string>
    <string name="pointLeft">남은 포인트</string>
    <string name="getBadge">획득배지</string>
    <string name="ecoNews">환경 소식</string>
    <string name="paint">paint</string>
    <string name="forest">forest</string>
    <string name="sea">sea</string>
    <string name="mud">mud</string>
    <string name="wonIcon">₩</string>
    <string name="missionName">미션이름</string>
    <string name="missionContent">미션어ㅓ쩌구설명이렇게하면포인트를얻을수있다사람살려흐으흐흑졸작하기기시라</string>
    <string name="missionDescription">미션설명어쩌구어자아안미아렁ㅁ 아어란이르아이알아아러아ㅓㄹ다 ㅇ아러아호아민야야ㅑ양로양화아 아롱햐도해쟈오햐됴매캬야아유하</string>
    <string name="getPoint">획득코인:</string>
    <string name="point">00</string>
    <string name="mission">/20)</string>
    <string name="missionSuccess">(00</string>
    <string name="upload">올리기</string>
    <string name="confirm">완료</string>
    <string name="date">0000.00.00</string>
    <string name="content">어쩌구저쩌구</string>
    <string name="vegan">비건</string>
    <string name="zeroWaste">제로웨이스트</string>
    <string name="bookmark">찜한가게</string>
    <string name="storeName">가게이름</string>
    <string name="information">기본정보</string>
    <string name="open">영업일</string>
    <string name="rest">휴무일</string>
    <string name="address">주소</string>
    <string name="ectInformation">기타정보</string>
    <string name="menu">메뉴</string>
    <string name="won">원</string>
    <string name="review">리뷰</string>
    <string name="writtenReview">작성한 리뷰</string>
    <string name="notice">공지사항</string>
    <string name="inquire">문의사항</string>
    <string name="logout">로그아웃</string>
    <string name="quit">탈퇴하기</string>
    <string name="setting">설정</string>
    <string name="posting">내용을 입력하세요</string>
</resources>