<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spaceShopLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown">

    <ImageView
        android:id="@+id/shopBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/spaceShopTabLayout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/shopBack"
        app:tabGravity="center">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/shopPaintTab"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/paint"></com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/shopForestTab"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/forest"></com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/shopSeaTab"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/sea"></com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/shopMudTab"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/mud"></com.google.android.material.tabs.TabItem>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/spaceShopViewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spaceShopTabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>