<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/missionPostingEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="52dp"
        android:inputType="text"
        android:hint="@string/posting"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/missionPostingCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/ic_camera"
        android:contentDescription="@string/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/missionPostingBtn"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>