<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/brown"
    tools:context=".SettingFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="370dp"
        android:layout_height="180dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/beige">

        <TextView
            android:id="@+id/getBadgeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/getBadge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/setting"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:src="@android:drawable/ic_menu_add"
            android:contentDescription="@string/setting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/badge1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/getBadge"
            app:layout_constraintTop_toBottomOf="@id/getBadgeTxt"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/badge2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/getBadge"
            app:layout_constraintTop_toBottomOf="@id/getBadgeTxt"
            app:layout_constraintStart_toEndOf="@id/badge1"/>

        <ImageView
            android:id="@+id/badge3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:background="@color/darkReddishBrown"
            android:contentDescription="@string/imageView"
            app:layout_constraintTop_toBottomOf="@id/getBadgeTxt"
            app:layout_constraintStart_toEndOf="@id/badge2"/>

        <ImageView
            android:id="@+id/badge4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:background="@color/darkReddishBrown"
            android:contentDescription="@string/imageView"
            app:layout_constraintTop_toBottomOf="@id/getBadgeTxt"
            app:layout_constraintStart_toEndOf="@id/badge3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="370dp"
        android:layout_height="88dp"
        android:layout_marginTop="250dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/beige">

        <TextView
            android:id="@+id/settingBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="15dp"
            android:text="@string/bookmark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settingReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="58dp"
            android:text="@string/writtenReview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="370dp"
        android:layout_height="182dp"
        android:layout_marginTop="370dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/beige">
        <TextView
            android:id="@+id/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="20dp"
            android:text="@string/notice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/inquire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="60dp"
            android:text="@string/inquire"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="104dp"
            android:text="@string/logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/memberLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="150dp"
            android:text="@string/quit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>