<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBeige">

    <TextView
        android:id="@+id/missionDescName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/missionName"
        android:fontFamily="@font/bm_hanna11yrs"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/missionDescBadge"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ecobag_illust"
        android:scaleType="fitXY"
        android:contentDescription="@string/imageView"
        app:layout_constraintTop_toBottomOf="@id/missionDescName"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/missionDescImg"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/missionDescBadge"
        android:contentDescription="@string/imageView"
        android:src="@drawable/mission_desc_img"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/missionDescTxt"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/missionDescription"
        android:fontFamily="@font/bm_hanna11yrs"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toTopOf="@id/missionDescImg"
        app:layout_constraintBottom_toBottomOf="@id/missionDescImg"
        />

    <Button
        android:id="@+id/missionDescBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:text="@string/upload"
        android:fontFamily="@font/bm_hanna11yrs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/missionDescImg" />
    </androidx.constraintlayout.widget.ConstraintLayout>
