<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="20dp"
    android:background="@color/whiteYellowishGreen">

    <ImageView
        android:id="@+id/storeImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="13dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/storeName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/storeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:text="@string/storeName"
        android:textSize="18sp"
        android:fontFamily="@font/bm_hanna11yrs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/storeImg"
        />

    <ImageView
        android:id="@+id/storeBookmarkImg"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ic_heart"
        android:contentDescription="@string/imageView"
        app:layout_constraintTop_toBottomOf="@id/storeName"
        app:layout_constraintStart_toEndOf="@id/storeImg"/>

    <TextView
        android:id="@+id/storeBookmarkTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="00"
        android:textSize="12sp"
        android:fontFamily="@font/bm_hanna11yrs"
        app:layout_constraintTop_toBottomOf="@id/storeName"
        app:layout_constraintStart_toEndOf="@id/storeBookmarkImg"/>


    <TextView
        android:id="@+id/storeTagTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:background="@color/lightYellowishGreen"
        android:fontFamily="@font/bm_hanna11yrs"
        android:text="@string/vegan"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/storeBookmarkImg"
        app:layout_constraintStart_toEndOf="@id/storeImg"
        />

</androidx.constraintlayout.widget.ConstraintLayout>